# system_architecture

./: README.md  bits.c  btest
TD1/: CMakeLists.txt  bits.c  btest
TD2-3/sim/seq/: seq-full.hcl
TD4/: README  sol.txt
TD4/bomb8/: bomb
TD5/: answer.txt  assembly2.s  assembly3.s  csim.c  ctarget  input.txt  input1.txt  input2.txt  input3.txt  input4.txt  rtarget  sol1.txt  sol2.txt  sol3.txt  sol4.txt
TD6/: csim.c
TD6-7/: csim
TD6-7/csim.dSYM/Contents/Resources/DWARF/: csim
TD6-7/traces/: test.trace
TD8-9/: mdriver  mm.1.c  mm.c  short3-bal.rep
